# AIVAS

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig
main/: AIVAS.c  AIVAS.cpp  AfeSession.cpp  AfeSession.hpp  Application.cpp  Application.hpp  Arduino.hpp  AudioBuffer.cpp  AudioBuffer.hpp  AudioSession.cpp  AudioSession.hpp  CMakeLists.txt  Component.hpp  Context.cpp  Context.hpp  Display.cpp  Display.hpp  Event.hpp  Function.hpp  Json.cpp  Json.hpp  Logger.hpp  MarvinSession.cpp  MarvinSession.hpp  Memory.cpp  Memory.hpp  Microphone.cpp  Microphone.hpp  Mqtt.cpp  Mqtt.hpp  MqttClient.cpp  MqttClient.hpp  Queue.cpp  Queue.hpp  Ringbuffer.cpp  Ringbuffer.hpp  Sensors.cpp  Sensors.hpp  Singleton.hpp  SoftTimer.cpp  (+17 more)
